
Version 1.16-33 (opened November 13, 2009)

	* DESCRIPTION: Guillaume Blanchet added to the Authors. 

	* spandepth: New function to find the depths of nodes in a
	spanning tree from spantree() function. Per request of
	W. E. Sharp. 

	* bstick: refuses to analyse capscale() models with imaginary
	components because I have no idea how to do it. Reported by
	Richard Telford, Bergen.
	
Version 1.16-32 (closed November 13, 2009)

	* alias.cca: gained argument 'names.only' (defaults FALSE) to only
	return the names of the aliased variables insted of their defining
	equations. 

	* rarefy: failed with one site and many sample sizes like
	rarefy(rpois(10, 2), sample=2:3).

	* msoplot: uses standard legend() to display info instead of hand
	crafted positioning of the legend information.

	* ordisurf: plotting main title was broken with NA handling in
	1.16-31 (r1049). Also increased grid density and adjusted pushing
	out limits of convex hull.

	* pcnm: new function for PCNM (Principal Coordinates of
	Neighbourhood Matrix) with option for row weighs allowing PCNM for
	cca. Based on Stéphane Dray's PCNM function in his (unreleased)
	SpacemakeR package. Imported with history from sedarVegan in
	http://sedar.r-forge.r-project.org/. Has scores.pcnm to select all
	(default) or some vectors of 'choice'.

	* decostand: implemented Marti Anderson's log scaling of type
	log(x, base = logbase) + 1 as a part of Feature Request #473. The
	coding follows closely Etienne Laliberte's suggestion, and also
	handles non-negative non-integer data. 

	* vegdist: C code for an alternative version of Gower Index that
	skips double zeros. No R level interface yet. If this function is
	to be used from vegdist.R, it should be added as item 14 in
	'method' list, and the R level preprocessing should be done
	similarly as for "gower" (method choice 6). This was implemented
	for inspecting the implementation of second part of Feature
	Request #473, but may be removed if that part of the request is